--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,8 +9,9 @@ $pink: #fa7c91;
 $brown: #757763;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
-$info: #1e9ced;
-$dark: hsl(0, 0%, 21%);
+$info: #009986;
+$dark: #212121;
+
 
 // Update Bulma's global variables
 $family-sans-serif: 'Montserrat', sans-serif;
@@ -20,7 +21,6 @@ $primary: $purple;
 $link: $pink;
 $widescreen-enabled: true;
 $fullhd-enabled: true;
-
 
 // Update some of Bulma's component variables
 $body-background-color: $dark;
@@ -32,3 +32,20 @@ $footer-background-color: $dark;
 // Import only what you need from Bulma
 @import "~bulma/bulma";
 @import "~bulma-divider";
+
+.hero.is-medium{
+      height: 766px;
+}
+
+.hero.has-background {
+  position: fixed;
+}
+
+.hero-background {
+  position: absolute;
+  object-fit: cover;
+  object-position: center center;
+  width: 100%;
+  height: 100%;
+}
+
