--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,11 +52,19 @@ $footer-background-color: $dark;
 
 #why{
   background-image: url(/img/rose.png);
-  height: 706px;
   position: absolute;
   object-fit: cover;
   object-position: center center;
   width: 100%;
-  height: 100%;
+  height: auto;
   background-repeat: no-repeat;
+}
+
+#artist {
+  padding-top: 10%;
+}
+
+.footer {
+    background-color: #212121;
+    padding: 3rem 1.5rem 0rem;
 }
