--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,6 +64,10 @@ $footer-background-color: $dark;
   padding-top: 10%;
 }
 
+#recordListIta {
+  padding-top: 2%;
+}
+
 .footer {
     background-color: #212121;
     padding: 3rem 1.5rem 0rem;
