--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,22 +23,11 @@ $footer-background-color: $dark;
 @import "~bulma/bulma";
 @import "~bulma-divider";
 
-.hero.is-medium {
-  height: 706px;
+.hero {
+  background: url(/img/bak.png) center / cover;
 }
 
-.hero.has-background {
-  position: fixed;
-}
-
-.hero-background {
-  position: absolute;
-  object-fit: cover;
-  object-position: center center;
-  width: 100%;
-  height: 100%;
-}
-#barra{
+#barra {
   padding-top: 10%;
 }
 
@@ -46,11 +35,11 @@ $footer-background-color: $dark;
   padding: 3rem 9rem;
 }
 
-.thumbnail{
+.thumbnail {
   padding: 3rem 0;
 }
 
-#why{
+#why {
   background-image: url(/img/rose.png);
   position: absolute;
   object-fit: cover;
@@ -58,17 +47,56 @@ $footer-background-color: $dark;
   width: 100%;
   height: auto;
   background-repeat: no-repeat;
-}
-
-#artist {
-  padding-top: 10%;
+  padding: 3rem 1.5rem 0rem;
 }
 
 #recordListIta {
   padding-top: 2%;
 }
 
+#cercartista{
+  padding-bottom: 2rem;
+}
+
 .footer {
-    background-color: #212121;
-    padding: 3rem 1.5rem 0rem;
+  background-color: #00000000;
+  padding: 3rem 1.5rem 0rem;
+}
+
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+  border: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+/* 4x3 Aspect Ratio */
+.iframe-container-4x3 {
+  padding-top: 75%;
+}
+
+@media (max-width: 1024px) {
+  .hero {
+    background: #212121;
+  }
+  #why {
+    background: #cb7375;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero {
+    background: #212121;
+  }
+  #why {
+    background: #cb7375;
+  }
 }
