--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,6 @@ $footer-background-color: $dark;
 
 // Import only what you need from Bulma
 @import "~bulma/bulma";
-@import "~bulma-divider";
 
 .hero {
   background: url(/img/bak.png) center / cover;
@@ -101,35 +100,17 @@ $footer-background-color: $dark;
   }
 }
 
-.autocomplete {
-  /*the container must be positioned relative:*/
-  position: relative;
-  display: inline-block;
-}
+//parallax
+.parallax {
+  /* The image used */
+  background-image: url(/img/wallpaper.png);
 
-.autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
-}
-.autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
-}
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
-}
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
